gracie (0.2.7-1) unstable; urgency=medium

  * New upstream version.
    + Now declares version information as generated from VCS.
    + Distutils config doesn't require application to load, only version
      information.
  * debian/control:
    + Fix a FTBFS bug: Build-Depends on a version of debhelper that allows
      python-central to correctly manipulate the 'dh' sequences.
    + Add Vcs-Bzr field.
    + Add Homepage field.
    + Add all runtime libraries needed for test suite as Build-Depends.

 -- Ben Finney <ben+debian@benfinney.id.au>  Fri, 12 Sep 2008 16:16:36 +1000

gracie (0.2.6-2) unstable; urgency=high

  * First release post-ITP. Thanks, Leonardo Serra, for the help and
    inspiration!
    (closes: bug#498563)
  * debian/rules:
    + Fix debhelper configuration, to allow package to install.
    + Re-work for debhelper 7.
  * debian/control:
    + Update Standards-Version.
    + Update dependencies for new packaging.
  * debian/watch:
    + Add watch file.
  * debian/copyright:
    + Re-work for machine-parseable format.

 -- Ben Finney <ben+debian@benfinney.id.au>  Thu, 11 Sep 2008 18:19:45 +1000

gracie (0.2.6-1) unstable; urgency=low

  * New upstream version.

 -- Ben Finney <ben+debian@benfinney.id.au>  Wed, 17 Oct 2007 16:02:01 +1000

gracie (0.2.3-1) unstable; urgency=low

  * Initial release.

 -- Ben Finney <ben+debian@benfinney.id.au>  Fri, 24 Aug 2007 10:47:31 +1000