@@ -10,8 +10,10 @@ gracie (0.2.7-1) unstable; urgency=medium
     + Add Vcs-Bzr field.
     + Add Homepage field.
     + Add all runtime libraries needed for test suite as Build-Depends.
+  * debian/rules:
+    + Simplify 'install' target by using default actions.
 
- -- Ben Finney <ben+debian@benfinney.id.au>  Fri, 12 Sep 2008 16:16:36 +1000
+ -- Ben Finney <ben+debian@benfinney.id.au>  Thu, 18 Sep 2008 17:03:40 +1000
 
 gracie (0.2.6-2) unstable; urgency=high
 
